--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
                         <h3>Basic Projects</h3>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Digits Classification
                         
                         <!-- <a href="{{ url_for('digitClassifier') }}"> -->
@@ -121,28 +121,28 @@
                         <!-- </a> -->
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Titanic Survival Prediction
                         <button class="ml-proj-btn" onclick="window.location.href = '{{ url_for('titanicPrediction') }}';">
                             Try it
                         </button>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         California Housing Value Prediction
                         <button class="ml-proj-btn">
                             Try it
                         </button>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Horse Human Classifier
                         <button class="ml-proj-btn">
                             Try it
                         </button>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Happy Sad Emoji Classifier
                         <button class="ml-proj-btn">
                             Try it
@@ -154,21 +154,21 @@
                         <h3>Intermediate Projects</h3>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Email Spam Classifier
                         <button class="ml-proj-btn" onclick="window.location.href = '{{ url_for('emailClassifier') }}';">
                             Try it
                         </button>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Text to speech using voice cloning
                         <button class="ml-proj-btn">
                             Try it
                         </button>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Invisiblity Cloak using Python
                         <button class="ml-proj-btn">
                             Try it
@@ -180,21 +180,21 @@
                         <h3>Advanced Projects</h3>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Speech Sentimental Analysis
                         <button class="ml-proj-btn" onclick="window.location.href = '{{ url_for('speechSentiment') }}';">
                             Try it
                         </button>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         Spoofing Detection System
                         <button class="ml-proj-btn" onclick="window.location.href = '{{ url_for('spoofDetection') }}';">
                             Try it
                         </button>
                     </div>
                     <div class="proj1 proj">
-                        <img src="static\icons\ml-img.png" alt="">
+                        <img src="static/icons/ml-img.png" alt="">
                         GitHub Repository Analyzer
                         <button class="ml-proj-btn">
                             Try it
@@ -208,19 +208,19 @@
                 </div>
                 <div class="web-sub">
                     <div class="proj">
-                        <img src="static\icons\web-img.png" alt="">
+                        <img src="static/icons/web-img.png" alt="">
                         Landing Page
                     </div>
                     <div class="proj">
-                        <img src="static\icons\web-img.png" alt="">
+                        <img src="static/icons/web-img.png" alt="">
                         Apna College challenge 1
                     </div>
                     <div class="proj">
-                        <img src="static\icons\web-img.png" alt="">
+                        <img src="static/icons/web-img.png" alt="">
                         Apna College challenge 2
                     </div>
                     <div class="proj">
-                        <img src="static\icons\web-img.png" alt="">
+                        <img src="static/icons/web-img.png" alt="">
                         Apna College challenge 3
                     </div>
                 </div>
@@ -231,11 +231,11 @@
                 </div>
                 <div class="app-sub">
                     <div class="proj">
-                        <img src="static\icons\app-img.png" alt="">
+                        <img src="static/icons/app-img.png" alt="">
                         App1
                     </div>
                     <div class="proj">
-                        <img src="static\icons\app-img.png" alt="">
+                        <img src="static/icons/app-img.png" alt="">
                         App 2
                     </div>
                     
